--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
     <!--My CSS-->
     <link rel="stylesheet" href="style.css"/>
-    <title>My Portfolio | Ike Mawarni</title>
+    <title>My Portfolio | Ike Mawar</title>
   </head>
   <body id="home">
     <!-- Navbar -->
